Update reports to Turkish

--- a/profilization_report.html
+++ b/profilization_report.html
@@ -11,49 +11,57 @@
     li { margin-bottom: 5px; }
     strong { color: #000; }
 </style>
-<title>Qualitative Research Profiles</title>
+<title>Nitel Araştırma Profilleri</title>
 </head>
 <body>
-<h1>Qualitative Research Site Selection Strategy</h1>
-<p><strong>Objective:</strong> Identify distinct demographic profiles across 81 cities to select diverse locations for qualitative fieldwork.</p>
-<p><strong>Data Sources:</strong> Average Household Size, Median Age, Marital Status (Single/Married/Divorced). <em>Dependency Ratio excluded as requested.</em></p>
-<h2>Identified Research Profiles</h2>
-<h3>Profile 1: Higher Divorce Rate</h3>
-<p><strong>Target Demographic:</strong>
-- Household Structure: Standard/Small
-- Age Cohort: Middle Aged
-- Marital Dynamics: 65.5% Married, 3.6% Divorced</p>
-<p><strong>Recommended Fieldwork Sites (Representative):</strong>
+<h1>Nitel Araştırma İçin Saha Seçim Stratejisi</h1>
+<p><strong>Amaç:</strong> 81 şehir arasından, nitel saha çalışması için farklı demografik profilleri temsil eden şehirleri belirlemek.</p>
+<p><strong>Kullanılan Veriler:</strong> Ortalama Hanehalkı Büyüklüğü, Ortanca Yaş, Medeni Durum (Bekar/Evli/Boşanmış). <em>Bağımlılık Oranı (hatalı veri) hariç tutulmuştur.</em></p>
+<h2>Belirlenen Araştırma Profilleri</h2>
+<h3>Profil 1: Olgun Nüfus &amp; Yüksek Boşanma Oranı</h3>
+<p><strong>Neden Bu Profil Seçilmeli?</strong>
+Yaşlanan nüfusun ihtiyaçlarını ve kuşak çatışmalarını incelemek için elverişlidir. Değişen aile yapısı ve boşanma sonrası yaşam pratiklerini araştırmak için önemlidir. </p>
+<p><strong>Hedef Demografi Özellikleri:</strong>
+- Hane Yapısı: Standart/Küçük
+- Yaş Grubu: Olgun (&gt;37)
+- Medeni Durum: %65.5 Evli, %3.6 Boşanmış</p>
+<p><strong>Önerilen Saha Şehirleri (Temsili):</strong>
 - <strong>Ankara</strong>
 - <strong>Antalya</strong>
 - <strong>Aydın</strong></p>
 <hr />
-<h3>Profile 2: Large Families &amp; Young Population &amp; High Single Rate</h3>
-<p><strong>Target Demographic:</strong>
-- Household Structure: Large (&gt;3.5)
-- Age Cohort: Young (&lt;30)
-- Marital Dynamics: 55.2% Married, 0.5% Divorced</p>
-<p><strong>Recommended Fieldwork Sites (Representative):</strong>
+<h3>Profil 2: Geniş Aileler &amp; Genç Nüfus &amp; Yüksek Bekar Oranı</h3>
+<p><strong>Neden Bu Profil Seçilmeli?</strong>
+Geleneksel geniş aile yapısını ve akrabalık ilişkilerini incelemek için idealdir. Gençlerin hayata bakışını ve eğitim/iş beklentilerini anlamak için seçilmelidir. </p>
+<p><strong>Hedef Demografi Özellikleri:</strong>
+- Hane Yapısı: Geniş (&gt;3.8)
+- Yaş Grubu: Genç (&lt;30)
+- Medeni Durum: %55.2 Evli, %0.5 Boşanmış</p>
+<p><strong>Önerilen Saha Şehirleri (Temsili):</strong>
 - <strong>Diyarbakır</strong>
 - <strong>Muş</strong>
 - <strong>Mardin</strong></p>
 <hr />
-<h3>Profile 3: Mature Population</h3>
-<p><strong>Target Demographic:</strong>
-- Household Structure: Standard/Small
-- Age Cohort: Mature (&gt;38)
-- Marital Dynamics: 67.4% Married, 2.2% Divorced</p>
-<p><strong>Recommended Fieldwork Sites (Representative):</strong>
+<h3>Profil 3: Çekirdek/Küçük Haneler &amp; Olgun Nüfus</h3>
+<p><strong>Neden Bu Profil Seçilmeli?</strong>
+Bireyselleşme ve modern çekirdek aile dinamiklerini gözlemlemek için uygundur. Yaşlanan nüfusun ihtiyaçlarını ve kuşak çatışmalarını incelemek için elverişlidir. </p>
+<p><strong>Hedef Demografi Özellikleri:</strong>
+- Hane Yapısı: Standart/Küçük
+- Yaş Grubu: Olgun (&gt;37)
+- Medeni Durum: %67.4 Evli, %2.2 Boşanmış</p>
+<p><strong>Önerilen Saha Şehirleri (Temsili):</strong>
 - <strong>Bolu</strong>
 - <strong>Isparta</strong>
 - <strong>Manisa</strong></p>
 <hr />
-<h3>Profile 4</h3>
-<p><strong>Target Demographic:</strong>
-- Household Structure: Standard/Small
-- Age Cohort: Middle Aged
-- Marital Dynamics: 62.0% Married, 1.5% Divorced</p>
-<p><strong>Recommended Fieldwork Sites (Representative):</strong>
+<h3>Profil 4: Yüksek Bekar Oranı</h3>
+<p><strong>Neden Bu Profil Seçilmeli?</strong>
+Ortalama Türkiye demografisini temsil eden standart bir profil.</p>
+<p><strong>Hedef Demografi Özellikleri:</strong>
+- Hane Yapısı: Standart/Küçük
+- Yaş Grubu: Orta Yaş
+- Medeni Durum: %62.0 Evli, %1.5 Boşanmış</p>
+<p><strong>Önerilen Saha Şehirleri (Temsili):</strong>
 - <strong>Malatya</strong>
 - <strong>Elazığ</strong>
 - <strong>Osmaniye</strong></p>
